--- a/app/src/main/res/layout/item_idea.xml
+++ b/app/src/main/res/layout/item_idea.xml
@@ -79,6 +79,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:gravity="center_vertical|left|start"
             android:text='@{String.format("%d", viewState.quantity)}'
+            android:textColor="@color/colorButton"
             tools:text='1'
         />
 
