--- a/app/src/main/res/layout/fragment_idea_list.xml
+++ b/app/src/main/res/layout/fragment_idea_list.xml
@@ -6,6 +6,9 @@
         <variable
             name="handler"
             type="com.pinyaoting.garcondecuisine.interfaces.presentation.IdeaListActionHandlerInterface"/>
+        <variable
+            name="fabContainer"
+            type="com.getbase.floatingactionbutton.FloatingActionsMenu"/>
     </data>
 
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -44,7 +47,7 @@
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{() -> handler.onShareButtonClick()}"
+                android:onClick="@{(v) -> handler.onShareButtonClick(v, fabContainer)}"
                 android:src="@drawable/ic_share"
                 android:tint="@color/colorButton"
                 app:fab_colorNormal="@color/colorDownOverlayDark"
@@ -53,7 +56,7 @@
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{() -> handler.onSearchButtonClick()}"
+                android:onClick="@{(v) -> handler.onSearchButtonClick(v, fabContainer)}"
                 android:src="@drawable/ic_search"
                 android:tint="@color/colorButton"
                 app:fab_colorNormal="@color/colorRightOverlayDark"
@@ -62,7 +65,7 @@
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{() -> handler.onNearbyStoreButtonClick()}"
+                android:onClick="@{(v) -> handler.onNearbyStoreButtonClick(v, fabContainer)}"
                 android:src="@drawable/ic_shopping_cart"
                 android:tint="@color/colorButton"
                 app:fab_colorNormal="@color/colorLeftOverlayDark"
